<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backgroundlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/playername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/tvPlayerName"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/playernameinput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playername" />

    <Spinner
        android:id="@+id/levelinput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup" />

    <TextView
        android:id="@+id/score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:text="@string/tvScore"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playernameinput" />

    <EditText
        android:id="@+id/scoreinput"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toEndOf="@+id/score"
        app:layout_constraintTop_toTopOf="@+id/score" />

    <Button
        android:id="@+id/quitbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/btQuit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/soundactiveinput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:checked="false"
        android:text="@string/tvSoundActive"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score" />

    <TextView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:text="@string/tvBackground"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soundactiveinput" />

    <Spinner
        android:id="@+id/backgroundcolorinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="220dp"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/background" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:text="@string/tvDifficulty"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/playername" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scoreinput"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/easybutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvEasy" />

        <RadioButton
            android:id="@+id/normalbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvNormal" />

        <RadioButton
            android:id="@+id/hardbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvHard" />

        <RadioButton
            android:id="@+id/veryhardbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvVeryHard" />

        <RadioButton
            android:id="@+id/expertbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvExpert" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radiogrouppreferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/quitbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radioButtonSharedPreferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getSharedPreferences" />

        <RadioButton
            android:id="@+id/radioButtonPreferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getPreferences" />

        <RadioButton
            android:id="@+id/radioButtonDefaultSharedPreferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getDefaultSharedPreferences" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonPreferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/ShowPreferencesFile"
        app:layout_constraintBottom_toTopOf="@+id/quitbutton"
        android:onClick="goToSharedPreferencesActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiogrouppreferences" />

</androidx.constraintlayout.widget.ConstraintLayout>